# AOC2022

./: .gitignore  README.md  aoc2022.opam  aoc2022.opam.template  dune  dune-project  sunrise.fish
aoc2022/: dune  main.ml
day0/: day0.ml  dune
day1/: day1.ml  dune
day10/: day10.ml  dune
day11/: day11.ml  dune
day12/: day12.ml  dune
day13/: day13.ml  dune
day14/: day14.ml  dune
day15/: day15.ml  dune
day16/: day16.ml  dune
day17/: day17.ml  dune
day2/: day2.ml  dune
day3/: day3.ml  dune
day4/: day4.ml  dune
day5/: day5.ml  dune
day6/: day6.ml  dune
day7/: day7.ml  dune
day8/: day8.ml  dune
day9/: day9.ml  dune
src/: dune  main.ml
test/: dune  main.ml  test.ml  test1.ml  test10.ml  test11.ml  test12.ml  test13.ml  test14.ml  test15.ml  test16.ml  test2.ml  test3.ml  test4.ml  test5.ml  test6.ml  test7.ml  test8.ml  test9.ml  testUtils.ml
utils/: all.ml  colours.ml  dune  extensions.ml  types.ml  utils.ml
