(library
 (name utils)
 (modules utils)
 (libraries eio mtime.clock.os))

(library
 (name extensions)
 (modules extensions)
 (libraries notty notty.unix))

(library
 (name all)
 (modules all)
 (libraries
  domainslib
  eio
  day0
  day1
  day2
  day3
  day4
  day5
  day6
  day7
  day8
  day9
  day10
  day11
  day12
  day13
  day14
  day15
  day16))
